--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
 	<body>
 		<section class="container">
 
-			<h1 style="text-align: center; font-size: 3em;">Labels</h1>
-			<p style="text-align: center; font-size: 1.5em;">Lightweight CSS labels.</p>
+			<h1 style="text-align: center; font-size: 3em; margin-bottom: 0;">Labels</h1>
+			<p style="text-align: center; font-size: 1.5em; margin: 0;">Lightweight CSS labels.</p>
+			<p style="text-align: center;"><a href="https://github.com/cferdinandi/labels#readme">Labels on GitHub</a></p>
+
+			<br><br>
 
 			<p><span class="label">Label</span> <span class="label label-success">Sucess Label</span> <span class="label label-danger">Danger Label</span> <span class="label label-warning">Warning Label</span></p>
 
