--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		</style>
 
 		<!-- stylesheets -->
-		<link rel="stylesheet" href="css/labels-css.css" type="text/css">
+		<link rel="stylesheet" href="dist/css/labels.css" type="text/css">
 
 		<!-- HTML5 Shim for IE -->
 		<!--[if IE]>
